[gd_scene load_steps=8 format=2]

[ext_resource path="res://Images/background.png" type="Texture" id=1]
[ext_resource path="res://Nave.tscn" type="PackedScene" id=2]
[ext_resource path="res://Movimiento3.gd" type="Script" id=3]
[ext_resource path="res://funciones/Funcion01.gd" type="Script" id=4]

[sub_resource type="Resource" id=1]
script = ExtResource( 4 )
r = 200.0
k = 1.0

[sub_resource type="Resource" id=2]
script = ExtResource( 4 )
r = 200.0
k = 2.0

[sub_resource type="Resource" id=3]
script = ExtResource( 4 )
r = 200.0
k = 0.5

[node name="Movimiento" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
margin_left = -1006.92
margin_top = -774.989
margin_right = 1041.08
margin_bottom = 761.011
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cam" type="Camera2D" parent="."]
current = true

[node name="Nave1" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -128 )
z_index = 10
movement = SubResource( 1 )

[node name="Nave2" parent="." instance=ExtResource( 2 )]
z_index = 10
movement = SubResource( 2 )

[node name="Nave3" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 128 )
z_index = 10
movement = SubResource( 3 )

[node name="ControlPanel" type="HBoxContainer" parent="."]
anchor_top = -0.493
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 390.0
margin_top = 43.8
margin_right = -22.5
margin_bottom = -37.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scale" type="VSlider" parent="ControlPanel"]
margin_left = 63.0
margin_right = 79.0
margin_bottom = 515.0
max_value = 4.0
step = 0.1
value = 1.0

[node name="Speed" type="VSlider" parent="ControlPanel"]
margin_left = 83.0
margin_right = 99.0
margin_bottom = 515.0
min_value = 0.1
max_value = 50.0
step = 0.1
value = 0.5

[connection signal="value_changed" from="ControlPanel/Scale" to="." method="_on_Scale_value_changed"]
[connection signal="value_changed" from="ControlPanel/Speed" to="." method="_on_Speed_value_changed"]
